# tempo

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
migrations/: V1__items.rs  V2__tags.rs  V3__items_tags.rs  V4__items_last.rs  V4__minutes_to_hours.rs  V5__integral_minutes_to_hours.rs  V6__last_error_minutes_to_hours.rs
src/: cadence.rs  date.rs  db.rs  format.rs  item.rs  main.rs  pid.rs  serde_duration.rs  store.rs  tag.rs
src/cli/: add.rs  all.rs  delete.rs  duration.rs  edit.rs  finish.rs  mod.rs  pull.rs  ready.rs
