[package]
name = "tempo"
version = "1.1.0-pre"
edition = "2021"
authors = [ "Brian Hicks <brian@brianthicks.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
barrel = { version = "0.7.0", features = [ "sqlite3" ] }
chrono = { version = "0.4.19", features = [ "alloc", "std", "clock", "serde" ] }
clap = { version = "3.0.7", features = [ "std", "color", "suggestions", "derive", "cargo", "wrap_help", "env" ] }
directories = "4.0.1"
env_logger = "0.9.0"
log = "0.4.14"
refinery = { version = "0.8.4", features = [ "rusqlite" ] }
rusqlite = { version = "0.26.3", features = [ "chrono", "bundled" ] }
serde = { version = "1.0.133", features = [ "derive" ] }
serde_json = "1.0.75"
thiserror = "1.0.30"
